--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,6 @@
 .App {
+  width: 100%;
+  height: 100%;
   text-align: center;
   color: black;
   display: flex;
@@ -6,4 +8,3 @@
   justify-content: center;
   flex-direction: column;
 }
-
