--- a/src/styles/ButtonPanel.css
+++ b/src/styles/ButtonPanel.css
@@ -1,9 +1,12 @@
 .button-panel-container {
-    width: 60%;
-    height: 500px;
-    border: 1px solid black;
+  width: 40%;
+  height: 500px;
+  border: 1px solid black;
+  box-sizing: border-box;
+  display: flex;
+  padding: 15px;
 }
 
 .header {
-    margin: 0;
+  margin: 0;
 }
