--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -4,5 +4,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 25px;
+  font-size: 21px;
+  font-weight: 500;
+  box-sizing: border-box;
+  border: 1px solid #d8d8d8;
+}
+
+.button-item:hover {
+  cursor: pointer;
+}
+
+.reSize-button {
+  width: 50%;
+}
+
+.reColored-button {
+  background-color: #f5913e;
 }
