--- a/src/styles/ButtonPanel.css
+++ b/src/styles/ButtonPanel.css
@@ -1,9 +1,11 @@
 .button-panel-container {
   width: 40%;
   height: 500px;
-  border: 1px solid black;
+  border: 1px solid #d8d8d8;
+  border-top: none;
   box-sizing: border-box;
   display: flex;
+  background-color: #e0e0e0;
 }
 
 .header {
@@ -18,6 +20,6 @@
 
 .number-row {
   width: 100%;
-  height: 25%;
+  height: 20%;
   display: flex;
 }
