--- a/src/styles/Display.css
+++ b/src/styles/Display.css
@@ -1,14 +1,18 @@
 .display-container {
   box-sizing: border-box;
   width: 40%;
-  height: 50px;
-  border: 1px solid black;
+  height: 70px;
+  border: none;
+  border-bottom: 1px solid #d8d8d8;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 15px;
+  color: white;
+  background-color: #858694;
 }
 
 .result-display {
   margin: 0;
+  font-size: 29px;
 }
