--- a/src/styles/ButtonPanel.css
+++ b/src/styles/ButtonPanel.css
@@ -1,5 +1,5 @@
 .button-panel-container {
-  width: 40%;
+  width: 700px;
   height: 500px;
   border: 1px solid #d8d8d8;
   border-top: none;
@@ -20,6 +20,6 @@
 
 .number-row {
   width: 100%;
-  height: 20%;
+  height: 100px;
   display: flex;
 }
