--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -1,5 +1,4 @@
 .button-item {
-  width: 25%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -8,6 +7,7 @@
   font-weight: 500;
   box-sizing: border-box;
   border: 1px solid #d8d8d8;
+  background-color: #f5913e;
 }
 
 .button-item:hover {
@@ -19,5 +19,5 @@
 }
 
 .reColored-button {
-  background-color: #f5913e;
+  background-color: transparent;
 }
